--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,29 +1,31 @@
+# OPTIONAL/CONFIGURABLE Options
 Options +FollowSymLinks -MultiViews
-# Turn mod_rewrite on
+
+# REQUIRED Turn mod_rewrite on
 RewriteEngine On
 
-# For LocalHost !.php
+# OPTIONAL For LocalHost, disable rewrite rules
 #RewriteCond %{HTTP_HOST} !=localhost
 #RewriteCond %{HTTP_HOST} !=127.0.0.1
 #RewriteCond %{REMOTE_ADDR} !=127.0.0.1
 #RewriteCond %{REMOTE_ADDR} !=::1
 
-## hide .php extension (OPTIONAL, keeps people from being able to use .php in the url properly an messes up some php code sometimes)
+## OPTIONAL hide .php extension (keeps people from being able to use .php in the url properly an messes up some php code sometimes)
 # To externally redirect /dir/foo.php to /dir/foo
 #RewriteCond %{THE_REQUEST} ^[A-Z]{3,}\s([^.]+)\.php [NC]
 #RewriteRule ^ %1 [R=302,L]
 
-# To internally forward /dir/foo to /dir/foo.php
+# REQUIRED To internally forward /dir/foo to /dir/foo.php
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.php -f
 RewriteRule ^(.*?)/?$ $1.php [L]
 
-#Direct www to non-www for SSL reasons
+# OPTIONAL Direct www to non-www for SSL reasons
 #RewriteEngine On
 #RewriteBase /
 #RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 #RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
 
-#Direct non-www to www for SSL reasons
+# OPTIONAL Direct non-www to www
 RewriteCond %{HTTP_HOST} !^www\.
 RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
