--- a/lib/emailManager/package.json
+++ b/lib/emailManager/package.json
@@ -9,10 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "express": "^4.17.3",
-    "express-handlebars": "^6.0.5",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.3"
+    "nodemailer": "^6.7.3",
+    "wait-until": "0.0.2"
   }
 }
