--- a/nodejsport/package.json
+++ b/nodejsport/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.7.5",
     "passport": "^0.6.0",
     "sequelize": "^6.21.2",
+    "sequelize-auto": "^0.8.8",
     "wait-until": "0.0.2"
   },
   "devDependencies": {
