--- a/nodejsport/package.json
+++ b/nodejsport/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
