--- a/lib/emailManager/package.json
+++ b/lib/emailManager/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ultiscapeemailmanager",
+  "name": "lmsemailmanager",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
